# enum-filter

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
examples/: filtering.rs
examples/testing/: Cargo.toml
examples/testing/src/: main.rs
src/: functions.rs  impls.rs  lib.rs  names.rs  structs.rs  traits.rs
