[package]
name = "enum-filter"
version = "0.1.0"
authors = ["Paul Olteanu <p.a.olteanu@gmail.com>"]
repository = "https://github.com/PaulOlteanu/enum-filter"
license = "MIT"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convert_case = "0.6"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[workspace]
members = [
  "examples/testing"
]
